k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cronicle-service
spec:
  selector:
    app: cronicle
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3012
