k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cronicle-ingress
  annotations:
    kubernetes.io/ingress.class: <ingress-class-name>
spec:
  rules:
    - host: cronicle.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cronicle-service
                port:
                  name: http
